# Azure-IoT-Security-Agent-C

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  Dockerfile.debian  Dockerfile.ubuntu
src/agent/: CMakeLists.txt
src/agent/config/: LocalConfiguration.json
src/agent/inc/: agent_errors.h  agent_telemetry_counters.h  agent_telemetry_provider.h  authentication_manager.h  certificate_manager.h  consts.h  iothub_adapter.h  local_config.h  logger.h  logger_consts.h  memory_monitor.h  message_schema_consts.h  message_serializer.h  queue.h  scheduler_thread.h  security_agent.h  synchronized_queue.h  twin_configuration.h  twin_configuration_consts.h  twin_configuration_defs.h  twin_configuration_event_collectors.h  twin_configuration_event_priorities.h  twin_configuration_utils.h  utils.h
src/agent/src/: agent_errors.c  agent_telemetry_counters.c  agent_telemetry_provider.c  authentication_manager.c  certificate_manager.c  consts.c  iothub_adapter.c  local_config.c  logger.c  main.c  memory_monitor.c  message_schema_consts.c  message_serializer.c  queue.c  scheduler_thread.c  security_agent.c  synchronized_memory_monitor.c  synchronized_queue.c  twin_configuration.c  twin_configuration_consts.c  twin_configuration_event_collectors.c  twin_configuration_event_priorities.c  twin_configuration_utils.c  utils.c
src/cmake_config/: agentRules.cmake  utilityFunctions.cmake
src/installation/: ASCIoTAgent.service  InstallSecurityAgent.sh
src/tests/: CMakeLists.txt
src/tests/agent_configuration_error_collector_ut/: CMakeLists.txt  agent_configuration_error_collector_ut.c  main.c
src/tests/agent_int/: CMakeLists.txt  LocalConfiguration.json  agent_int.c  collectors_mocks.c  iothub_adapter_mock.c  local_config_mock.c  main.c  test_defs.h
src/tests/agent_telemetry_collector_ut/: CMakeLists.txt  agent_telemetry_collector_ut.c  main.c
src/tests/agent_telemetry_counter_ut/: CMakeLists.txt  agent_telemetry_counter_ut.c  main.c
src/tests/agent_telemetry_provider_ut/: CMakeLists.txt  agent_telemetry_provider_ut.c  main.c
src/tests/audit_control_ut/: CMakeLists.txt  audit_control_ut.c  audit_mocks.h  main.c  mocks.h
src/tests/audit_search_record_ut/: CMakeLists.txt  audit_mocks.h  audit_search_record_ut.c  main.c
src/tests/audit_search_ut/: CMakeLists.txt  audit_mocks.h  audit_search_ut.c  main.c
src/tests/audit_search_utils_ut/: CMakeLists.txt  audit_mocks.h  audit_search_utils_ut.c  main.c
src/tests/authentication_manager_ut/: CMakeLists.txt  authentication_manager_ut.c  main.c
src/tests/baseline_collector_ut/: CMakeLists.txt  baseline_collector_ut.c  main.c
src/tests/certificate_manager_ut/: CMakeLists.txt  certificate_manager_ut.c  main.c  openssl_mock.h  std_mocks.h
src/tests/connection_create_collector_ut/: CMakeLists.txt  connection_create_collector_ut.c  main.c
src/tests/connection_creation_collector_ut/: CMakeLists.txt  connection_creation_collector_ut.c  main.c
src/tests/correlation_manager_ut/: CMakeLists.txt  correlation_manager_ut.c  main.c  pthread_mock.h
src/tests/diagnostic_event_collector_ut/: CMakeLists.txt  diagnostic_event_collector_ut.c  main.c
src/tests/event_aggregator_ut/: CMakeLists.txt  event_aggregator_ut.c  main.c
src/tests/event_monitor_task_ut/: CMakeLists.txt  event_monitor_task_ut.c  main.c
src/tests/event_publisher_task_ut/: CMakeLists.txt  event_publisher_task_ut.c  main.c
src/tests/file_utils_ut/: CMakeLists.txt  file_utils_ut.c  main.c  std_mocks.h
src/tests/firewall_collector_ut/: CMakeLists.txt  firewall_collector_ut.c  main.c
src/tests/generic_audit_event_ut/: CMakeLists.txt  generic_audit_event_ut.c  main.c
src/tests/generic_event_ut/: CMakeLists.txt  generic_event_ut.c  main.c
src/tests/groups_iterator_ut/: CMakeLists.txt  groups_iterator_ut.c  main.c  os_groups_mock.h
src/tests/internal_memory_monitor_ut/: CMakeLists.txt  internal_memory_monitor_ut.c  main.c
src/tests/iothub_adapter_mqtt_ut/: CMakeLists.txt  iothub_adapter_mqtt_ut.c  main.c
src/tests/iothub_adapter_ut/: CMakeLists.txt  iothub_adapter_ut.c  main.c
src/tests/iptables_ip_utils_ut/: CMakeLists.txt  iptables_ip_utils_ut.c  main.c
src/tests/iptables_iprange_ut/: CMakeLists.txt  iptables_iprange_ut.c  main.c
src/tests/iptables_iterator_ut/: CMakeLists.txt  iptables_iterator_ut.c  iptables_mocks.h  main.c
src/tests/iptables_multiport_ut/: CMakeLists.txt  iptables_multiport_ut.c  main.c
src/tests/iptables_port_utils_ut/: CMakeLists.txt  iptables_port_utils_ut.c  main.c
src/tests/iptables_rules_iterator_ut/: CMakeLists.txt  iptables_mocks.h  iptables_rules_iterator_ut.c  main.c
src/tests/iptables_utils_ut/: CMakeLists.txt  iptables_utils_ut.c  main.c
src/tests/json_array_reader_ut/: CMakeLists.txt  json_array_reader_ut.c  main.c  parson_mock.h
src/tests/json_array_writer_ut/: CMakeLists.txt  json_array_writer_ut.c  main.c  parson_mock.h
src/tests/json_object_reader_ut/: CMakeLists.txt  json_object_reader_ut.c  json_reader_test.json  main.c
src/tests/json_object_writer_ut/: CMakeLists.txt  json_object_writer_ut.c  main.c  parson_mock.h
src/tests/json_reader_ut/: CMakeLists.txt  json_reader_ut.c  main.c
src/tests/json_writer_with_parson_ut/: CMakeLists.txt  json_writer_with_parson_ut.c  main.c
src/tests/listening_ports_collector_ut/: CMakeLists.txt  listening_ports_collector_ut.c  main.c  os_mock.h
src/tests/listening_ports_iterator_ut/: CMakeLists.txt  listening_ports_iterator_ut.c  main.c  os_mock.h
src/tests/local_config_ut/: CMakeLists.txt  local_config_ut.c  main.c
src/tests/local_users_collector_ut/: CMakeLists.txt  local_users_collector_ut.c  main.c
src/tests/logger_ut/: CMakeLists.txt  logger_ut.c  main.c
src/tests/message_serializer_ut/: CMakeLists.txt  main.c  message_serializer_ut.c
src/tests/process_creation_collector_ut/: CMakeLists.txt  main.c  process_creation_collector_ut.c
src/tests/process_info_handler_ut/: CMakeLists.txt  main.c  os_mocks.h  process_info_handler_ut.c
src/tests/process_utils_ut/: CMakeLists.txt  main.c  os_mocks.h  process_utils_ut.c
(+142 files in other folders)
