# Copyright (c) Microsoft. All rights reserved.
# Licensed under the MIT license. See LICENSE file in the project root for full license information.

include_directories(./inc)
include_directories(${AZURE_IOT_SDK_HEADERS})
include_directories(${PARSON_HEADERS})
include_directories(${UMOCK_HEADERS})
include_directories(${TESTRUNNER_HEADERS})

add_subdirectory(agent_configuration_error_collector_ut)
add_subdirectory(agent_telemetry_collector_ut)
add_subdirectory(agent_telemetry_counter_ut)
add_subdirectory(agent_telemetry_provider_ut)
add_subdirectory(audit_control_ut)
add_subdirectory(audit_search_record_ut)
add_subdirectory(audit_search_ut)
add_subdirectory(audit_search_utils_ut)
add_subdirectory(authentication_manager_ut)
add_subdirectory(baseline_collector_ut)
add_subdirectory(certificate_manager_ut)
add_subdirectory(connection_create_collector_ut)
add_subdirectory(correlation_manager_ut)
add_subdirectory(diagnostic_event_collector_ut)
add_subdirectory(event_aggregator_ut)
add_subdirectory(event_monitor_task_ut)
add_subdirectory(event_publisher_task_ut)
add_subdirectory(file_utils_ut)
add_subdirectory(firewall_collector_ut)
add_subdirectory(generic_audit_event_ut)
add_subdirectory(generic_event_ut)
add_subdirectory(groups_iterator_ut)
add_subdirectory(internal_memory_monitor_ut)
add_subdirectory(iothub_adapter_mqtt_ut)
add_subdirectory(iothub_adapter_ut)
add_subdirectory(iptables_ip_utils_ut)
add_subdirectory(iptables_iprange_ut)
add_subdirectory(iptables_iterator_ut)
add_subdirectory(iptables_multiport_ut)
add_subdirectory(iptables_port_utils_ut)
add_subdirectory(iptables_rules_iterator_ut)
add_subdirectory(iptables_utils_ut)
add_subdirectory(json_array_reader_ut)
add_subdirectory(json_array_writer_ut)
add_subdirectory(json_object_reader_ut)
add_subdirectory(json_object_writer_ut)
add_subdirectory(json_reader_ut)
add_subdirectory(json_writer_with_parson_ut)
add_subdirectory(listening_ports_collector_ut)
add_subdirectory(listening_ports_iterator_ut)
add_subdirectory(local_config_ut)
add_subdirectory(local_users_collector_ut)
add_subdirectory(logger_ut)
add_subdirectory(message_serializer_ut)
add_subdirectory(process_creation_collector_ut)
add_subdirectory(process_info_handler_ut)
add_subdirectory(process_utils_ut)
add_subdirectory(queue_ut)
add_subdirectory(schema_validation_ut)
add_subdirectory(sync_memory_monitor_ut)
add_subdirectory(sync_queue_ut)
add_subdirectory(system_information_collector_ut)
add_subdirectory(time_utils_ut)
add_subdirectory(twin_configuration_event_collectors_ut)
add_subdirectory(twin_configuration_ut)
add_subdirectory(twin_configuration_utils_ut)
add_subdirectory(twin_update_task_ut)
add_subdirectory(user_login_collector_ut)
add_subdirectory(users_iterator_ut)
add_subdirectory(utils_ut)
#integration test
add_subdirectory(agent_int)

